--- a/TypeEditor/v.01/src/ContextWindows/DropDownMenuEditor.mxml
+++ b/TypeEditor/v.01/src/ContextWindows/DropDownMenuEditor.mxml
@@ -12,24 +12,36 @@
 		}
 	</mx:Style>
 	
+	<mx:Script>
+		<![CDATA[
+			private var _langsProvider:Array = [];
+			
+			public function set langsProvider(lp:Array):void {
+				_langsProvider = lp;
+				
+			}
+			
+		]]>
+	</mx:Script>
+	
+	
 	<mx:HBox width="100%" horizontalGap="4">
-		<mx:VBox width="100%" verticalGap="0">
-			<mx:Label text="Native language" />
-			<mx:ComboBox cornerRadius="1" width="100%" />
+		<mx:VBox width="158" verticalGap="0" horizontalScrollPolicy="off" verticalScrollPolicy="off">
+			<mx:Label text="First language" />
+			<mx:ComboBox id="__firstLang" cornerRadius="1" width="158" />
 		</mx:VBox>
-		<mx:VBox width="100%" verticalGap="0">
-			<mx:Label text="Native language" />
-			<mx:ComboBox cornerRadius="1" width="100%" />
+		<mx:VBox width="158" verticalGap="0" horizontalScrollPolicy="off" verticalScrollPolicy="off">
+			<mx:Label text="Second language" />
+			<mx:ComboBox id="__sec" cornerRadius="1" width="158" />
 		</mx:VBox>
 	</mx:HBox>	
 	
 	
-	<mx:DataGrid width="100%" height="100%">
+	<mx:DataGrid width="100%" height="100%" draggableColumns="false" sortableColumns="false">
 		<mx:columns>
-			<mx:DataGridColumn dataField="Text" />
-			<mx:DataGridColumn dataField="Value" width="40" />
-			<mx:DataGridColumn dataField="Text" />
-			<mx:DataGridColumn dataField="Value" width="40" />	
+			<mx:DataGridColumn dataField="Text" width="160" />
+			<mx:DataGridColumn dataField="Text" width="160" />
+			<mx:DataGridColumn dataField="Value" />	
 		</mx:columns>
 	</mx:DataGrid>
 	
