--- a/TypeEditor/v.01/src/ContextWindows/DropDownMenuEditor.mxml
+++ b/TypeEditor/v.01/src/ContextWindows/DropDownMenuEditor.mxml
@@ -14,11 +14,58 @@
 	
 	<mx:Script>
 		<![CDATA[
-			private var _langsProvider:Array = [];
+			import mx.utils.StringUtil;
+			import mx.events.DataGridEvent;
+			import mx.managers.PopUpManager;
 			
+			private const EMPTY_STR:String = '[[ empty ]]';
+			
+			[Bindable]
+			private var _langsProvider:Array = [];
+			private var _attrsProvider:Array = [];
+			private var rowsProvider:Array = [];
+						
 			public function set langsProvider(lp:Array):void {
-				_langsProvider = lp;
+				_langsProvider = lp;	
+			}
+			
+			public function set attrsProvider(ap:Array):void {
+				_attrsProvider = ap;				
+			}
+			
+			private function addNewRowBtnClickHandler():void {
+				var row:Object = { first:EMPTY_STR, second:EMPTY_STR, value:0 };
+				rowsProvider.push(row);
 				
+				__dg.dataProvider = rowsProvider;
+			}
+			
+			private function removeRowBtnClickHandler():void {
+				var newRowsProvider:Array = [];
+				var si:int = __dg.selectedIndex;
+				if (si < 0)
+					return;
+				
+				var i:int;
+				for (i = 0; i < rowsProvider.length; i++) {
+					if (i != si)
+						newRowsProvider.push(rowsProvider[i]);
+				}
+				
+				rowsProvider = newRowsProvider;
+				var vsp:int = __dg.verticalScrollPosition;
+				__dg.dataProvider = rowsProvider;
+				__dg.verticalScrollPosition = vsp;
+			}
+			
+			private function okBtnClickHandler():void {
+				this.dispatchEvent(new Event(Event.COMPLETE));
+			}
+			
+			private function itemEditEndHandler(event:DataGridEvent):void {
+				if (StringUtil.trim(event.currentTarget.itemEditorInstance.text) == '') {
+					event.currentTarget.itemEditorInstance.text = EMPTY_STR;
+				}
 			}
 			
 		]]>
@@ -26,23 +73,33 @@
 	
 	
 	<mx:HBox width="100%" horizontalGap="4">
-		<mx:VBox width="158" verticalGap="0" horizontalScrollPolicy="off" verticalScrollPolicy="off">
+		<mx:VBox width="148" verticalGap="0" horizontalScrollPolicy="off" verticalScrollPolicy="off">
 			<mx:Label text="First language" />
-			<mx:ComboBox id="__firstLang" cornerRadius="1" width="158" />
+			<mx:ComboBox id="__firstLang" cornerRadius="1" width="148" dataProvider="{_langsProvider}" />
 		</mx:VBox>
-		<mx:VBox width="158" verticalGap="0" horizontalScrollPolicy="off" verticalScrollPolicy="off">
+		<mx:VBox width="148" verticalGap="0" horizontalScrollPolicy="off" verticalScrollPolicy="off">
 			<mx:Label text="Second language" />
-			<mx:ComboBox id="__sec" cornerRadius="1" width="158" />
+			<mx:ComboBox id="__secondLang" cornerRadius="1" width="148" dataProvider="{_langsProvider}" />
 		</mx:VBox>
 	</mx:HBox>	
 	
-	
-	<mx:DataGrid width="100%" height="100%" draggableColumns="false" sortableColumns="false">
+	<mx:DataGrid id="__dg" itemEditEnd="{itemEditEndHandler(event);}"
+		width="100%" height="100%" draggableColumns="false" sortableColumns="false" resizableColumns="false" editable="true">
+		
 		<mx:columns>
-			<mx:DataGridColumn dataField="Text" width="160" />
-			<mx:DataGridColumn dataField="Text" width="160" />
-			<mx:DataGridColumn dataField="Value" />	
+			<mx:DataGridColumn dataField="first" width="150" headerText="Text" />
+			<mx:DataGridColumn dataField="second" width="150" headerText="Text" />
+			<mx:DataGridColumn dataField="value" headerText="Value" />	
 		</mx:columns>
 	</mx:DataGrid>
+	
+	<mx:HBox width="100%" horizontalGap="4" horizontalAlign="center">
+		<mx:Button label="Add" click="{addNewRowBtnClickHandler();}" />
+		<mx:Button label="Remove" click="{removeRowBtnClickHandler();}" />
+		<mx:Spacer width="100%" />
+		<mx:Button label="Ok" click="{okBtnClickHandler();}" />
+		<mx:Button label="Cancel" click="{PopUpManager.removePopUp(this);}" />
+	</mx:HBox>
+	
 	
 </mx:TitleWindow>
