git-svn-id: http://svn.vdombox.ru/flextools/trunk@2756 230e8929-42e3-3b44-a413-55659dd3a577

--- a/DB/DataEditor/v.01/resourceBrowser/ListItem.mxml
+++ b/DB/DataEditor/v.01/resourceBrowser/ListItem.mxml
@@ -12,13 +12,11 @@
 	horizontalScrollPolicy="off"
 	paddingTop="3" paddingLeft="3" paddingRight="3" paddingBottom="3"
 	backgroundColor="#FFF6EA" cornerRadius="3"
-	verticalGap="1" horizontalGap="3"
-	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*">
+	verticalGap="1" horizontalGap="3" xmlns:resourceBrowser="resourceBrowser.*">
 	
 	<resourceBrowser:SmoothImage id="__image" height="42" width="42"
 		verticalAlign="middle" horizontalAlign="center" maintainAspectRatio="true"
-		scaleContent="true" 
-		/>
+		scaleContent="true"	/>
 	<mx:VBox width="122" horizontalGap="0" verticalGap="1" horizontalScrollPolicy="off" verticalScrollPolicy="off" verticalAlign="middle">
 		<mx:HBox width="100%" horizontalAlign="left" horizontalGap="3" >
 			<mx:Label id="__type" text="JPG:" textAlign="left" fontWeight="bold" />
@@ -32,7 +30,6 @@
 			import mx.controls.Text;
 		
 			import mx.controls.Image;
-			import vdom.controls.resourceBrowser.SmoothImage;
 			
 			private var loader:Loader = new Loader();
 			
