--- a/DB/DataEditor/v.01/resourceBrowser/ThumbnailItem.mxml
+++ b/DB/DataEditor/v.01/resourceBrowser/ThumbnailItem.mxml
@@ -12,7 +12,7 @@
 	paddingTop="3" paddingLeft="3" paddingRight="3" paddingBottom="3"
 	backgroundColor="#FFF6EA" cornerRadius="3"
 	verticalGap="1" horizontalGap="1"
-	xmlns:resourceBrowser="vdom.controls.resourceBrowser.*">
+	xmlns:resourceBrowser="resourceBrowser.*">
 	
 	<mx:Spacer height="50%" />
 	<resourceBrowser:SmoothImage id="__image" maxWidth="100" maxHeight="100"
