--- a/IDE/Vdom/vdom/modules/Editor.mxml
+++ b/IDE/Vdom/vdom/modules/Editor.mxml
@@ -78,7 +78,7 @@
 		
 		<edit:Edit id="editorCanv" width="100%" height="100%"/>
 		
-		<scriptEditor:ScriptEditor id="scriptCanv" width="100%" height="100%" />
+		<scriptEditor:scriptEditor2 id="scriptCanv" width="100%" height="100%" />
 			
 		<treeEditor:TreeEditor id="treeCanv" width="100%" height="100%" />
 		
