--- a/IDE/Vdom/vdom/controls/ImageToolBar.mxml
+++ b/IDE/Vdom/vdom/controls/ImageToolBar.mxml
@@ -22,10 +22,10 @@
 	<mx:Script source="includes/imageToolBar.as"/>
 	
 	<mx:HBox left="5" right="5" bottom="5" top="2">	
-		<mx:Button
+		<!--<mx:Button
 			styleName="toolbarButton" 
 			width="20" height="20"
-			icon="@Embed(source='/assets/toolbars/imageToolbar/insert_image.png')"/>
+			icon="@Embed(source='/assets/toolbars/imageToolbar/insert_image.png')"/>-->
 		<mx:Button
 			styleName="toolbarButton"
 			width="20" height="20"
@@ -79,10 +79,10 @@
 			width="20" height="20" 
 			icon="@Embed(source='/assets/toolbars/imageToolbar/brightness_down.png')"
 			click="brightness(-.1);" />
-		<mx:Button 
+		<!--<mx:Button 
 			styleName="toolbarButton"
 			width="20" height="20" 
-			icon="@Embed(source='/assets/toolbars/imageToolbar/crop.png')"/>
+			icon="@Embed(source='/assets/toolbars/imageToolbar/crop.png')"/>-->
 		<mx:Button 
 			styleName="toolbarButton"
 			width="20" height="20" 
