--- a/IDE/Vdom/vdom/components/scriptEditor/scriptEditor2.mxml
+++ b/IDE/Vdom/vdom/components/scriptEditor/scriptEditor2.mxml
@@ -88,7 +88,7 @@
 			private function addNewScript():void
 			{
 				var dataXML:XML  = new XML('<Action/>');
-				dataXML.@Name = 'New script';
+				dataXML.@Name = 'New script' + Math.random();
 				serverScripts.addScript = dataXML;
 			}
 			
@@ -99,12 +99,44 @@
 			
 			private function setScript():void
 			{
-				textArea.text = serverScripts.script;
+				btSave.setStyle("color", "0x000000");
+				btSave.setStyle("borderColor", "0xAAB3B3");
+				
+				if(serverScripts.dataEnabled)
+				{	
+					textArea.enabled = true;
+					textArea.text = serverScripts.script;
+				}else
+				{
+					textArea.enabled = false;
+				}
+				
 			}
 			private function save():void
 			{
+				btSave.setStyle("color", "0x000000");
+				btSave.setStyle("borderColor", "0xAAB3B3");
+
+				
 				serverScripts.script = textArea.text;
 			}
+			
+			private function revert():void
+			{
+				btSave.setStyle("color", "0x000000");
+				btSave.setStyle("borderColor", "0xAAB3B3");
+
+				
+				textArea.text = serverScripts.script;
+			}
+			
+			private function textAreaDataChangeHandler():void
+			{
+				btSave.setStyle("color", "0xCC0000");
+				btSave.setStyle("borderColor", "0xEE0000");
+
+			}
+			
 		
 	]]>
 </mx:Script>
@@ -112,15 +144,16 @@
 		
 		<mx:VDividedBox width="250" height="100%">
 		 	<mx:VBox  width="100%"  height="40%" >
-				<mx:Label text="Pages:" color="0xFFFFFF" fontWeight="bold"/>
+				<mx:Label text="Containers:" color="0xFFFFFF" fontWeight="bold"/>
 	        	 <eventEditor:TreeContainer iconFunction="getIcon" id="trContainer" width="100%" height="100%" 
 				 	change="treeContainerChangeHandler(event)"/>
 			 </mx:VBox>
 			 <mx:Canvas label="canvas1" width="100%" height="100%"  >
 			    <mx:VBox  width="100%" height="100%" >
+			    		<mx:Label text="Server Actions:" color="0xFFFFFF" fontWeight="bold"/>
 				       <containers:ServerScripts id="serverScripts" width="100%" height="100%" dataChanged="{setScript()}" />
 				       <mx:HBox>
-					       <mx:Button label="Add Script" click="{addNewScript()}"  />
+					       <mx:Button  label="Add Script" click="{addNewScript()}"  />
 				       	 	<mx:Button label="Delete Script" click="{deleteScript()}"  />
 				       </mx:HBox>
 			      </mx:VBox>
@@ -131,10 +164,13 @@
 		
         <mx:VBox id="vBox" width="100%" height="100%" >
             <mx:TextArea id="textArea" width="100%" height="100%" 
-            		backgroundColor="#E1E1E1" text="same Text of code">            	 
-                
-            </mx:TextArea>
-           <mx:Button click="{save()}"/>
+            		 text="same Text of code" 
+            		 tabEnabled="true"
+            		  keyDown = "{textAreaDataChangeHandler()}" />            	 
+            <mx:HBox>
+	           <mx:Button id="btSave" label="Save" click="{save()}" />
+	           <mx:Button label="Revert" click="{revert()}"/>
+            </mx:HBox>
         </mx:VBox>
 	</mx:HDividedBox>
 		
