git-svn-id: http://svn.vdombox.ru/flextools/trunk@2800 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.01/src/ContextWindows/DropDownMenuEditor.mxml
+++ b/TypeEditor/v.01/src/ContextWindows/DropDownMenuEditor.mxml
@@ -24,6 +24,8 @@
 			private var _langsProvider:Array = [];
 			private var _attrsProvider:Array = [];
 			private var rowsProvider:Array = [];
+			private var editableLang:String = '';
+			private var exampleLang:String = '';
 						
 			public function set langsProvider(lp:Array):void {
 				_langsProvider = lp;	
@@ -71,6 +73,14 @@
 				if (StringUtil.trim(event.currentTarget.itemEditorInstance.text) == '') {
 					event.currentTarget.itemEditorInstance.text = EMPTY_STR;
 				}
+			}
+			
+			private function loadValues():void {
+				
+			}
+			
+			private function langChangeHandler():void {
+				
 			}
 			
 		]]>
