git-svn-id: http://svn.vdombox.ru/flextools/trunk@2848 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -146,7 +146,7 @@
 				Node.classConstructed;
 				GraphCanvas.classConstructed;
 				
-				Connector.connectMode = Connector.CM_CENTER;				
+				Connector.connectMode = Connector.CM_NEAREST;				
 				
 				var defaultCaptions:Object = {
 
