Fixed error(added CDATA)
git-svn-id: http://svn.vdombox.ru/flextools/trunk@2861 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -88,10 +88,15 @@
 	 		
 	 		private function hideHandler():void
 	 		{
+	 			creatDataToServer();
 	 			changeWatcher.unwatch();
 	 			trContainer.hideHandler();
 	 			trContainer.removeEventListener(EventEditorEvent.DATA_CHANGED, dataChangedListener);
 				can.removeAllChildren();
+				actionsArray = [];
+				eventsArray = [];
+				linesArray = [];
+				dataChanged = false;
 	 		}
 	 		
 	 		private var getApplEventID:String;
@@ -108,7 +113,7 @@
 	 			}else
 	 			{
 	 				dataManager.getApplicationEvents(getApplEventID);
-	 			}
+	 			}	
 	 			dataChanged = false;
 	 			
 	 			can.removeAllChildren();
