--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -74,6 +74,10 @@
 	 		private var changeWatcher:ChangeWatcher ;
 	 		private function showHandler():void
 	 		{
+	 			actionsArray = [];
+				eventsArray = [];
+				linesArray = [];
+				
 	 			changeWatcher = BindingUtils.bindProperty(trContainer, 'dataProvider', dataManager, 'listPages')
 	 			trContainer.showHandler();
 	 			trContainer.addEventListener(EventEditorEvent.DATA_CHANGED, dataChangedListener);
@@ -84,6 +88,7 @@
 	 			
 	 			curContainerID = dataManager.currentPageId;
 	 			curContainerTypeID = dataManager.getTypeByObjectId(curContainerID).Information.ID.toString();
+	 			
 	 		}
 	 		
 	 		private function hideHandler():void
@@ -243,11 +248,13 @@
 	        	var ID:String = trEvt.ID;
 	        	if(actionsArray[ID])
 	        	{
+//	        		deleteLines(ID);
 	        		can.removeChild(actionsArray[ID]);
 	        		delete actionsArray[ID];
 	        		
 	        	}else if(eventsArray[ID])
 	        	{
+//	        		deleteLines(ID);
 	        		trEvents.enabledItem = eventsArray[ID];
 	        		
 	        		if(can.contains(eventsArray[ID]))
@@ -255,8 +262,9 @@
 	        			
 	        		delete eventsArray[ID];
 	        	}
-	        	
 	        	deleteLines(ID);
+	        	
+	        	
 	        }
 	        
 	        private function deleteLines(ID:String):void
@@ -268,6 +276,7 @@
     					{
     						can.removeChild(linesArray[evtID][actID])
     						delete linesArray[evtID][actID];
+    						delete linesArray[evtID];
     					}    		
 	        		}
 	        }
@@ -574,7 +583,7 @@
 				{ 
 					var ObjSrcID:String = eventsArray[evtID].ObjSrcID;
 					var Name:String = eventsArray[evtID].Name;
-					
+					y
 					for(actID in linesArray[evtID])
 					{
 						temXML = <Action/>;
@@ -626,11 +635,14 @@
 					{
 						var objEv:EventEditorEvents = new EventEditorEvents(evt, curContainerTypeID);
 						
-						eventsArray[objEv.ID] = setListeners4Event(objEv);
-						
-						can.addChild(eventsArray[objEv.ID]);
-						
-						trEvents.disabledItem = objEv;
+						if(objEv)
+						{
+							eventsArray[objEv.ID] = setListeners4Event(objEv);
+							
+							can.addChild(eventsArray[objEv.ID]);
+							
+							trEvents.disabledItem = objEv;
+						}
 					}
 				}
 				
@@ -729,6 +741,7 @@
     				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF">
                 
             </mx:Canvas>
+            <mx:Button label="Save" click="{creatDataToServer()}"/>
         </mx:VBox>
 	</mx:HDividedBox>
 		
