git-svn-id: http://svn.vdombox.ru/flextools/trunk@2886 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/scriptEditor/scriptEditor2.mxml
+++ b/IDE/Vdom/vdom/components/scriptEditor/scriptEditor2.mxml
@@ -59,9 +59,13 @@
 			
 			private function addNewScript():void
 			{
+				var dataXML:XML  = new XML('<Action/>');
+				dataXML.@Name = 'New script' + Math.random();
+				serverScripts.addScript = dataXML;
+				/*
 				var rbWnd:CreatingNewActionWindow = CreatingNewActionWindow(PopUpManager.createPopUp(this, CreatingNewActionWindow, true));
 					rbWnd.addEventListener(CloseEvent.CLOSE, creatingNewActionWindowtHandler);
-				
+				*/
 			}
 			
 			private function creatingNewActionWindowtHandler():void
