git-svn-id: http://svn.vdombox.ru/flextools/trunk@2890 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -95,7 +95,7 @@
 	 		
 	 		private function hideHandler():void
 	 		{
-	 			creatDataToServer();
+//	 			creatDataToServer();
 	 			changeWatcher.unwatch();
 	 			trContainer.hideHandler();
 	 			trContainer.removeEventListener(EventEditorEvent.DATA_CHANGED, dataChangedListener);
@@ -118,7 +118,7 @@
 	 			
 	 			if(dataChanged)
 	 			{
-	 				creatDataToServer(); //eeEvt.objID
+//	 				creatDataToServer(); //eeEvt.objID
 	 				
 	 			}else
 	 			{
